--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-S3_COMMUNICATION_API = 'http://127.0.0.1:3003/'
+S3_COMMUNICATION_API='http://express-api:3003'
+DATABASE_URL='postgresql://postgres:0812@db:5432/mvp'
