--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+certifi==2024.6.2
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 Flask==2.1.3
@@ -5,14 +7,19 @@ Flask-Cors==3.0.10
 flask-openapi3==2.1.0
 Flask-SQLAlchemy==2.5.1
 greenlet==3.0.3
+idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 nose2==0.12.0
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pydantic==1.10.2
+python-dotenv==1.0.1
+requests==2.32.3
+requests-toolbelt==1.0.0
 six==1.16.0
 SQLAlchemy==1.4.41
 SQLAlchemy-Utils==0.38.3
 typing_extensions==4.3.0
+urllib3==2.2.2
 Werkzeug==2.2.2
